--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,43 @@
 #login {
   width: 400px;
 }
+
+#captchi {
+  /*border: 1px solid red;*/
+  width: auto;
+  min-width: 150px !important;
+  max-height: 800px !important;
+  height: auto !important;
+}
+#captchi ul {
+  /*
+  border: 1px solid red;
+  */
+  margin-top: 5px !important;
+}
+#captchi ul li {
+  margin-top: 2px !important;
+  margin-bottom: 2px !important;
+}
+#captchi div {
+  word-break: keep-all !important;
+  white-space: normal !important;
+  overflow: visible !important;
+}
+#captchi span.holder {
+  display: block;
+  margin: 0  !important;
+  padding: 0 !important;
+  position: relative !important;
+  top: 0px !important;
+  /*
+  border: 1px solid red !important;
+  margin-top: 40px  !important;
+  position: absolute !important;
+  float: right !important;
+  top: 30px;
+  height: 65px !important;
+  background-position: right bottom !important;
+  width: 70px !important;
+  */
+}
