--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@
   /*border: 1px solid red;*/
   width: auto;
   min-width: 150px !important;
-  max-height: 800px !important;
+  max-height: 600px !important;
   height: auto !important;
 }
 #captchi ul {
@@ -151,6 +151,7 @@
 #captchi ul li {
   margin-top: 2px !important;
   margin-bottom: 2px !important;
+  float: left;
 }
 #captchi div {
   word-break: keep-all !important;
@@ -173,4 +174,9 @@
   background-position: right bottom !important;
   width: 70px !important;
   */
+}
+span.error {
+  text-align: left; 
+  color: red;
+  margin-left: 10px;
 }
