--- a/css/style.css
+++ b/css/style.css
@@ -136,22 +136,24 @@
 }
 
 #captchi {
-  /*border: 1px solid red;*/
   width: auto;
   min-width: 150px !important;
   max-height: 600px !important;
   height: auto !important;
 }
 #captchi ul {
-  /*
-  border: 1px solid red;
-  */
   margin-top: 5px !important;
+  display: inline-block;
 }
 #captchi ul li {
   margin-top: 2px !important;
   margin-bottom: 2px !important;
   float: left;
+  width: 48px;
+  height:48px;
+  outline: 0 none;
+  font-style: inherit;
+  font-weight: inherit;
 }
 #captchi div {
   word-break: keep-all !important;
@@ -164,19 +166,13 @@
   padding: 0 !important;
   position: relative !important;
   top: 0px !important;
-  /*
-  border: 1px solid red !important;
-  margin-top: 40px  !important;
-  position: absolute !important;
-  float: right !important;
-  top: 30px;
-  height: 65px !important;
-  background-position: right bottom !important;
-  width: 70px !important;
-  */
 }
 span.error {
   text-align: left; 
   color: red;
   margin-left: 10px;
+}
+.ui-draggable-dragging {
+  z-index: 9999 !important;
+  position:relative;
 }
