--- a/css/style.css
+++ b/css/style.css
@@ -90,27 +90,6 @@
 	width:250px;
 }
 
-/*
-.widget-container #swtcptcf_contact_form input.text, 
-.widget-container #swtcptcf_contact_form textarea, 
-.widget-container #swtcptcf_contact_message, 
-.widget-container #swtcptcf_contact_name, 
-.widget-container #swtcptcf_contact_email, 
-.widget-container #swtcptcf_contact_subject,
-.textwidget #swtcptcf_contact_form input.text,
-.textwidget #swtcptcf_contact_form textarea, 
-.textwidget #swtcptcf_contact_message, 
-.textwidgetr #swtcptcf_contact_name, 
-.textwidget #swtcptcf_contact_email, 
-.textwidget #swtcptcf_contact_subject{
-    width: 200px !important;
-}
-
-.form-table td.swtcptcf_display_add_info_block {
-	padding:4px 10px 8px;
-}
-*/
-
 #sweetcaptcha-wrapper {
   padding-top:10px;
   clear: both;
@@ -135,44 +114,17 @@
   width: 400px;
 }
 
-#captchi {
-  width: auto;
-  min-width: 150px !important;
-  max-height: 600px !important;
-  height: auto !important;
-}
-#captchi ul {
-  margin-top: 5px !important;
-  display: inline-block;
-}
-#captchi ul li {
-  margin-top: 2px !important;
-  margin-bottom: 2px !important;
-  float: left;
-  width: 48px;
-  height:48px;
-  outline: 0 none;
-  font-style: inherit;
-  font-weight: inherit;
-}
 #captchi div {
   word-break: keep-all !important;
   white-space: normal !important;
   overflow: visible !important;
-}
-#captchi span.holder {
-  display: block;
-  margin: 0  !important;
-  padding: 0 !important;
-  position: relative !important;
-  top: 0px !important;
 }
 span.error {
   text-align: left; 
   color: red;
   margin-left: 10px;
 }
-.ui-draggable-dragging {
-  z-index: 9999 !important;
-  position:relative;
+
+#reg_passmail {
+  padding-top: 10px;
 }
